# Mynote

./: .gitignore  README.md  build_exe.ps1  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
static/: app.js  index.html  styles.css
tests/: test_ui_static.py
